2006-01-05  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.9.2 ===

2006-01-03  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: Add new API 

2006-01-02  Stepan Kasal  <kasal@ucw.cz>

	* glib/glib-docs.sgml (glib-Windows-Compatability-Functions): Rename
	(glib-Windows-Compatibility-Functions): , ie. s/Compata/Compati/
	* glib/glib-sections.txt: s/Compata/Compati/

2005-12-24  Matthias Clasen  <mclasen@redhat.com>

	* gobject/gobject-sections.txt:
	* gobject/tmpl/param_value_types.sgml: Document GType 
	paramspecs

2005-12-20  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: add g_thread_pool_set_sort_function.
	
2005-12-19  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/*.sgml: Update versioned deprecation

	* gobject/tmpl/gboxed.sgml: Document G_TYPE_HASH_TABLE.

	* glib/glib-sections.txt: Add g_list_free1

	* glib/glib-overrides.txt: Remove G_THREADS_IMPL_SOLARIS

2005-12-14  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: 
	* glib/tmpl/atomic_operations.sgml: Document new atomic
	operations.

2005-12-14  Federico Mena Quintero  <federico@ximian.com>

	* glib/building.sgml: Clarify exactly what happens when you use --enable-gc-friendly.

Mon Dec 12 15:31:41 2005  Tim Janik  <timj@imendio.com>

	* gobject/tmpl/objects.sgml: corrected floating reference documentation.

2005-12-09  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.9.1 ===

2005-12-07  Matthias Clasen  <mclasen@redhat.com>

	* gobject/tmpl/gparamspec.sgml: 
	* gobject/tmpl/gtype.sgml: Document n_preallocs as
	ignored.

2005-12-05  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: Updates
	
	* glib/tmpl/memory_slices.sgml: Fix a small formatting
	problem.

	* glib/tmpl/trees-nary.sgml: 
	* glib/tmpl/linked_lists_single.sgml: 
	* glib/tmpl/linked_lists_double.sgml: 
	* glib/tmpl/caches.sgml: 
	* glib/tmpl/strings.sgml: 
	* glib/tmpl/scanner.sgml: 
	* glib/tmpl/main.sgml: Add versioned deprecation.
